--- a/home/.conkyrc
+++ b/home/.conkyrc
@@ -22,7 +22,7 @@ lua_draw_hook_post main
 ##############################################
 background no
 use_xft yes
-xftfont Liberation Sans:size=9
+xftfont Liberation Sans:size=7
 xftalpha 1
 update_interval 1.0
 total_run_times 0
@@ -35,7 +35,7 @@ own_window_hints undecorated,sticky,skip_taskbar,skip_pager
 short_units yes
 double_buffer yes
 minimum_size 50 121
-maximum_width 45
+maximum_width 50
 draw_shades no
 draw_outline no
 draw_borders no
@@ -54,5 +54,7 @@ override_utf8_locale no
 #  Output
 ##############################################
 TEXT
-#$mem
-#${cpu cpu0}%
+${voffset 15}
+${alignc}${mem}
+${voffset 35}
+${alignc}${cpu}%
