--- a/home/.jshintrc
+++ b/home/.jshintrc
@@ -5,7 +5,7 @@
 
     "white": true,
     "indent": 4,
-    "strict": true,
+    "strict": false,
     "undef": true,
 
     "predef": ["define","has"]
