--- a/i3/config
+++ b/i3/config
@@ -148,12 +148,14 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-bindsym $mod+Shift+Right move right
-
 # split in horizontal orientation
 bindsym $mod+Right split h
 
 # split in vertical orientation
 bindsym $mod+Down split v
+
+# Pulseaudio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
 
 
