--- a/i3/config
+++ b/i3/config
@@ -122,7 +122,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command yabar
+        status_command TZ=Australia/Brisbane polybar top
 }
 
 # ---------------------------------
