--- a/terminator/config
+++ b/terminator/config
@@ -2,6 +2,7 @@
   enabled_plugins = Logger,
   handle_size = 5
   inactive_color_offset = 0.75
+  suppress_multiple_term_dialog = True
   title_font = Ubuntu Mono derivative Powerline 9
   title_hide_sizetext = True
   title_transmit_bg_color = "#3465a4"
@@ -58,16 +59,15 @@
 [plugins]
 [profiles]
   [[default]]
-    scrollbar_position = hidden
-    palette = "#000000:#eb6e67:#95ee8f:#f8c456:#6eaafb:#d886f3:#6cdcf7:#b2b2b2:#50536b:#eb6e67:#95ee8f:#f8c456:#6eaafb:#d886f3:#6cdcf7:#dfdfdf"
-    background_image = None
+    background_color = "#282c34"
     background_darkness = 0.98
+    copy_on_selection = True
     cursor_color = "#bbbbbb"
+    font = Fantasque Sans Mono 10
     foreground_color = "#abb2bf"
     icon_bell = False
-    copy_on_selection = True
-    background_color = "#282c34"
-    font = Fantasque Sans Mono 10
-    scrollback_infinite = True
-    use_system_font = False
     login_shell = True
+    palette = "#000000:#eb6e67:#95ee8f:#f8c456:#6eaafb:#d886f3:#6cdcf7:#b2b2b2:#50536b:#eb6e67:#95ee8f:#f8c456:#6eaafb:#d886f3:#6cdcf7:#dfdfdf"
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    use_system_font = False
