--- a/terminator/config
+++ b/terminator/config
@@ -3,10 +3,14 @@
   handle_size = 5
   inactive_color_offset = 0.75
   suppress_multiple_term_dialog = True
-  title_font = Ubuntu Mono derivative Powerline 9
+  title_font = Lucy Tewi 8
   title_hide_sizetext = True
-  title_transmit_bg_color = "#3465a4"
   title_use_system_font = False
+  title_transmit_fg_color = "#93a1a1"
+  title_transmit_bg_color = "#002b36"
+  title_inactive_fg_color = "#93a1a1"
+  title_inactive_bg_color = "#657b83"
+
 [keybindings]
   broadcast_all = None
   broadcast_group = None
@@ -47,6 +51,7 @@
   toggle_zoom = None
   ungroup_all = None
   ungroup_tab = None
+
 [layouts]
   [[default]]
     [[[child1]]]
@@ -56,18 +61,18 @@
     [[[window0]]]
       parent = ""
       type = Window
-[plugins]
+
 [profiles]
   [[default]]
-    background_color = "#282c34"
     background_darkness = 0.98
     copy_on_selection = True
-    cursor_color = "#bbbbbb"
     font = Fantasque Sans Mono 10
-    foreground_color = "#abb2bf"
     icon_bell = False
     login_shell = True
-    palette = "#000000:#eb6e67:#95ee8f:#f8c456:#6eaafb:#d886f3:#6cdcf7:#b2b2b2:#50536b:#eb6e67:#95ee8f:#f8c456:#6eaafb:#d886f3:#6cdcf7:#dfdfdf"
+    palette = "#002b36:#dc322f:#859900:#b58900:#268bd2:#6c71c4:#2aa198:#93a1a1:#657b83:#dc322f:#859900:#b58900:#268bd2:#6c71c4:#2aa198:#fdf6e3"
+foreground_color = "#93a1a1"
+    background_color = "#002b36"
+    cursor_color = "#93a1a1"
     scrollback_infinite = True
     scrollbar_position = hidden
     use_system_font = False
