--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,7 +1,7 @@
 # Shadow
-shadow = true;
+shadow = false;
 no-dnd-shadow = true;
-no-dock-shadow = false;
+no-dock-shadow = true;
 clear-shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
