Lots of tmux config for navigation and copying, still WIP. Added some extra commands for sxhkdrc to launch terminals and browsers and cleaned up bspwmrc a bit

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,28 @@
 # Force non-login shell for tmux as parent should always be login shell
 set -g default-command "${SHELL}"
 
+# Enable mouse mode (note that mode-mouse is deprecated from v2.1)
+setw -g mouse on
+
+# Enable copy and paste that mimics Vim keybindings (aside from Shift+p)
+# TODO: See if-shell for multi-config versions
+setw -g mode-keys vi
+bind P paste-buffer
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi Y send-keys -X copy-line
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# Splits open in same working directory and new tmux windows open right
+# after the current one - pane_current_path appears to fail on windows subsystem
+bind '"' split-window -v -c '#{pane_current_path}'
+bind '%' split-window -h -c '#{pane_current_path}'
+
 # URXVT tab like switching
-bind -n S-down new-window
+# So S-down will fail on windows subsystem linux (at least) if S-up is not
+# also set
+bind -n S-up new-window -c '#{pane_current_path}'
+bind -n S-down new-window -c '#{pane_current_path}'
 bind -n S-left prev
 bind -n S-right next
 bind -n C-left swap-window -t -1
@@ -11,3 +31,7 @@ bind -n C-right swap-window -t +1
 # Correctly set window titles (even over ssh)
 set -g set-titles on
 set -g set-titles-string "#T"
+
+# Status
+set -g status-left '#{?client_prefix,#[bg=colour245 fg=colour233 bold],#[fg=colour155]} (#S)'
+set -g status-position top
