Added default terminal xterm-256color to tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# Force xterm
+set -g default-terminal "xterm-256color"
+
 # Force non-login shell for tmux as parent should always be login shell
 set -g default-command "${SHELL}"
 
