Added indent guide background colors to VSCode and removed Omnisharp from NeoVim

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -5,6 +5,9 @@
     "workbench.iconTheme": "material-icon-theme",
     "workbench.editor.enablePreview": false,
     "workbench.editor.enablePreviewFromQuickOpen": false,
+    "workbench.colorCustomizations": {
+        "editorIndentGuide.background": "#00000033"
+    },
 
     "editor.fontFamily": "Wt-Position Mono Regular",
     "editor.fontSize": 22,
@@ -22,7 +25,7 @@
     "FSharp.logLanguageServiceRequests": "both",
     "FSharp.fsiFilePath": "fsharpi",
     "FSharp.msbuildAutoshow": true,
-    
+
     "vim.incsearch": true,
     "vim.hlsearch": true,
     "vim.useSystemClipboard": true,
