ZSH will now do a new login shell each time, losing the env utils is weird. Updated tmux to make this change. Moved the position of the Pure prompt symbol to before it is assigned. Added alacritty config. xmobar is now launched successfully by xmonad

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,9 @@
 # Force xterm
 set -g default-terminal "xterm-256color"
 
-# Force non-login shell for tmux as parent should always be login shell
-set -g default-command "${SHELL}"
+# Always launch the shells in login mode - it may seem overkill however the
+# env plugins that get loaded should always be available
+set -g default-command "${SHELL} --login"
 
 # Enable mouse mode (note that mode-mouse is deprecated from v2.1)
 setw -g mouse on
