Potential fix, although perhaps not universally, for Konsole not supporting tmux and neovim colours

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,7 @@
 # Force xterm
 set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-window-option -g xterm-keys on
 
 # Always launch the shells in login mode - it may seem overkill however the
 # env plugins that get loaded should always be available
