Set the login shell to zsh for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "xterm-256color"
 
 # Always launch the shells in login mode - it may seem overkill however the
 # env plugins that get loaded should always be available
-set -g default-command "${SHELL} --login"
+set -g default-command "zsh --login"
 
 # Enable mouse mode (note that mode-mouse is deprecated from v2.1)
 setw -g mouse on
