Setup file for visual studio code can now be run multiple times, will sync all extensions cleanly each time

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1,7 +1,7 @@
 {
     "window.menuBarVisibility": "toggle",
 
-    "workbench.colorTheme": "OceanDeep",
+    "workbench.colorTheme": "Ariake Dark",
     "workbench.iconTheme": "material-icon-theme",
     "workbench.editor.enablePreview": false,
     "workbench.editor.enablePreviewFromQuickOpen": false,
