Fixed up tmux key delays and term variable. Added fzf search to zshrc. Added more javascript snippets to nvim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Force xterm
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-window-option -g xterm-keys on
 
@@ -12,6 +12,7 @@ setw -g mouse on
 
 # Enable copy and paste that mimics Vim keybindings (aside from Shift+p)
 # TODO: See if-shell for multi-config versions
+set -sg escape-time 300
 setw -g mode-keys vi
 bind P paste-buffer
 bind -T copy-mode-vi v send-keys -X begin-selection
