--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Force xterm
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-window-option -g xterm-keys on
 
