--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,3 +42,7 @@ set -g set-titles-string "#T"
 # Status
 set -g status-left '#{?client_prefix,#[bg=colour245 fg=colour233 bold],#[fg=colour155]} (#S)'
 set -g status-position top
+
+set -g @plugin 'tmux-plugins/tpm'
+
+run $XDG_DATA_HOME/tmux/plugins/tpm/tpm
