Changed prefixes for tmux keys, sick of dealing with terminals not supporting shift

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,10 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-window-option -g xterm-keys on
 
+# Set a secondary prefix
+set-option -g prefix C-a
+set-option -g prefix2 C-b
+
 # Always launch the shells in login mode - it may seem overkill however the
 # env plugins that get loaded should always be available
 set -g default-command "zsh --login"
@@ -28,10 +32,9 @@ bind '%' split-window -h -c '#{pane_current_path}'
 # URXVT tab like switching
 # So S-down will fail on windows subsystem linux (at least) if S-up is not
 # also set
-bind -n S-up new-window -c '#{pane_current_path}'
-bind -n S-down new-window -c '#{pane_current_path}'
-bind -n S-left prev
-bind -n S-right next
+bind "t" new-window -c '#{pane_current_path}'
+bind -n C-q prev
+bind -n C-e next
 bind -n C-left swap-window -t -1
 bind -n C-right swap-window -t +1
 
