Fixed issue in VSCode Vim mappings (normal mode). Added file utils to the extensions and disabled minimap

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -42,7 +42,7 @@
             "after": ["<Esc>"]
         }
     ],
-    "vim.otherModesKeyBindings": [
+    "vim.normalModeKeyBindings": [
         {
             "before": [";"],
             "after": [":"]
@@ -214,5 +214,6 @@
             }
         }
     ]
-    }
+    },
+    "editor.minimap.enabled": false
 }
